# wheel_leg

./: README.md
CTRL/: PCB_PCB_ESP32_Control_2024-11-08.json  SCH_ESP32_Control_2024-11-08.json
ESP32_WROOM/: platformio.ini
ESP32_WROOM/include/: adc.h  ble.h  can.h  ctrl.h  imu.h  legs.h  motor.h  pid.h
ESP32_WROOM/include/matlab_code/: leg_position.h  leg_speed.h  leg_vmc_conv.h  lqr_k.h
ESP32_WROOM/src/: adc.cpp  ble.cpp  can.cpp  ctrl.cpp  imu.cpp  legs.cpp  main.cpp  motor.cpp  pid.cpp  serial.cpp
ESP32_WROOM/src/matlab_code/: leg_position.c  leg_speed.c  leg_vmc_conv.c  lqr_k.c
FOC/: PCB_PCB_2024-11-08.json  SCH_FocNano_C6T6_AS5600_2024-11-08.json
FOC/C6T6_AS5600/: .mxproject  C6T6_AS5600.ioc  CMakeLists.txt  读我.txt
FOC/C6T6_AS5600/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
FOC/C6T6_AS5600/Core/Src/: can.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
FOC/C6T6_AS5600/MDK-ARM/: C6T6_AS5600.uvguix.cj  C6T6_AS5600.uvguix.zhangyucong  C6T6_AS5600.uvoptx  C6T6_AS5600.uvprojx
FOC/C6T6_AS5600/MDK-ARM/C6T6_AS5600/: C6T6_AS5600.hex
FOC/C6T6_AS5600/MDK-ARM/RTE/_C6T6_AS5600/: RTE_Components.h
FOC/C6T6_AS5600/Motor/: Beep.c  Beep.h  FlashStorage.c  FlashStorage.h  SimpleKalman.c  SimpleKalman.h  mission_can.c  mission_loop.c  mission_loop.h  mission_uart.c
FOC/C6T6_AS5600/SimpleFOC/: BLDCMotor.c  BLDCMotor.h  FOCMotor.c  FOCMotor.h  as5600.c  as5600.h  foc_utils.c  foc_utils.h
Matlab/: leg_function.m  out_leg_position.m  out_leg_position.prj  out_leg_speed.m  out_leg_speed.prj  out_leg_vmc_conv.m  out_leg_vmc_conv.prj  out_lqr_k.m  out_lqr_k.prj  system_calculate.m
Matlab/codegen/lib/out_leg_position/: codedescriptor.dmr  defines.txt  out_leg_position.c  out_leg_position.h  out_leg_position_data.c  out_leg_position_data.h  out_leg_position_initialize.c  out_leg_position_initialize.h  out_leg_position_rtw.bat  out_leg_position_rtw.mk  out_leg_position_terminate.c  out_leg_position_terminate.h  out_leg_position_types.h  rtwtypes.h
Matlab/codegen/lib/out_leg_position/examples/: main.c  main.h
Matlab/codegen/lib/out_leg_position/html/: report.mldatx
Matlab/codegen/lib/out_leg_position/interface/: _coder_out_leg_position_api.c  _coder_out_leg_position_api.h  _coder_out_leg_position_mex.c  _coder_out_leg_position_mex.h
Matlab/codegen/lib/out_leg_speed/: codedescriptor.dmr  defines.txt  out_leg_speed.c  out_leg_speed.h  out_leg_speed_data.c  out_leg_speed_data.h  out_leg_speed_initialize.c  out_leg_speed_initialize.h  out_leg_speed_rtw.bat  out_leg_speed_rtw.mk  out_leg_speed_terminate.c  out_leg_speed_terminate.h  out_leg_speed_types.h  rtwtypes.h
Matlab/codegen/lib/out_leg_speed/examples/: main.c  main.h
Matlab/codegen/lib/out_leg_speed/html/: report.mldatx
Matlab/codegen/lib/out_leg_speed/interface/: _coder_out_leg_speed_api.c  _coder_out_leg_speed_api.h  _coder_out_leg_speed_mex.c  _coder_out_leg_speed_mex.h
Matlab/codegen/lib/out_leg_vmc_conv/: codedescriptor.dmr  defines.txt  out_leg_vmc_conv.c  out_leg_vmc_conv.h  out_leg_vmc_conv_data.c  out_leg_vmc_conv_data.h  out_leg_vmc_conv_initialize.c  out_leg_vmc_conv_initialize.h  out_leg_vmc_conv_rtw.bat  out_leg_vmc_conv_rtw.mk  out_leg_vmc_conv_terminate.c  out_leg_vmc_conv_terminate.h  out_leg_vmc_conv_types.h  rtwtypes.h
Matlab/codegen/lib/out_leg_vmc_conv/examples/: main.c  main.h
Matlab/codegen/lib/out_leg_vmc_conv/html/: report.mldatx
Matlab/codegen/lib/out_leg_vmc_conv/interface/: _coder_out_leg_vmc_conv_api.c  _coder_out_leg_vmc_conv_api.h  _coder_out_leg_vmc_conv_mex.c  _coder_out_leg_vmc_conv_mex.h
Matlab/codegen/lib/out_lqr_k/: codedescriptor.dmr  defines.txt  out_lqr_k.c  out_lqr_k.h  out_lqr_k_data.c  out_lqr_k_data.h  out_lqr_k_initialize.c  out_lqr_k_initialize.h  out_lqr_k_rtw.bat  out_lqr_k_rtw.mk  out_lqr_k_terminate.c  out_lqr_k_terminate.h  out_lqr_k_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
Matlab/codegen/lib/out_lqr_k/examples/: main.c  main.h
Matlab/codegen/lib/out_lqr_k/html/: report.mldatx
Matlab/codegen/lib/out_lqr_k/interface/: _coder_out_lqr_k_api.c  _coder_out_lqr_k_api.h  _coder_out_lqr_k_mex.c  _coder_out_lqr_k_mex.h
Matlab/codegen/mex/out_leg_position/html/: report.mldatx
Matlab/codegen/mex/out_lqr_k/html/: report.mldatx
Matlab/slprj/_jitprj/: sgb66ZHCt9aIQF06Rqgd2nD.l  sgb66ZHCt9aIQF06Rqgd2nD.mat  singRWvO4ELRw1O2VYZknOC.l  singRWvO4ELRw1O2VYZknOC.mat
Matlab/slprj/_sfprj/EMLReport/: sgb66ZHCt9aIQF06Rqgd2nD.mat  singRWvO4ELRw1O2VYZknOC.mat
Matlab/slprj/_sfprj/precompile/: AaPelDPLiVgBA00qUbzELC.mat  YGFsRiRtGWxh1CFHOS711B.mat
Matlab/slprj/_sfprj/sys_sim_2020a/: amsi_serial.mat
Matlab/slprj/_sfprj/sys_sim_2020a/_self/sfun/info/: binfo.mat
SW/: 小腿.SLDPRT  车轮.SLDPRT  适配4310大腿.SLDPRT  重置底板.SLDPRT  飞卡车皮.SLDPRT
